fix: info banner on tablet and desktop

--- a/src/_component/info-banner/info-banner.scss
+++ b/src/_component/info-banner/info-banner.scss
@@ -8,12 +8,6 @@
   margin: -6rem 2rem 5rem;
   grid-template-columns: 1fr;
 
-  & > div {
-    grid-column: 1/-1;
-    grid-row-start: initial;
-    grid-row-end: initial;
-  }
-
   &__icon {
     grid-row: 1/3;
     font-size: 2.5rem;
@@ -91,5 +85,15 @@
   .info-banner {
     padding: 4rem 7rem;
     grid-template-columns: auto 1fr auto 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .info-banner {
+    & > div {
+      grid-column: 1/-1;
+      grid-row-start: initial;
+      grid-row-end: initial;
+    }
   }
 }
